; ModuleID = '/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_symbols.c_parseSymbols.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_symbols.c_parseSymbols.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@r_bin_symbol_free = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32, i32*, i32)* @parseSymbols to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @parseSymbols(i32* %0, i32 %1, i32* %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 24, i32* %10, align 4
  %17 = load i32*, i32** %8, align 8
  %18 = icmp ne i32* %17, null
  br i1 %18, label %19, label %25

19:                                               ; preds = %4
  %20 = load i32, i32* %7, align 4
  %21 = load i32, i32* %9, align 4
  %22 = mul nsw i32 %21, 24
  %23 = add nsw i32 %20, %22
  %24 = load i32*, i32** %8, align 8
  store i32 %23, i32* %24, align 4
  br label %25

25:                                               ; preds = %19, %4
  %26 = load i32, i32* %9, align 4
  %27 = call i32* @calloc(i32 24, i32 %26)
  store i32* %27, i32** %11, align 8
  %28 = load i32*, i32** %11, align 8
  %29 = icmp ne i32* %28, null
  br i1 %29, label %31, label %30

30:                                               ; preds = %25
  store i32* null, i32** %5, align 8
  br label %70

31:                                               ; preds = %25
  %32 = load i32, i32* @r_bin_symbol_free, align 4
  %33 = call i32* @r_list_newf(i32 %32)
  store i32* %33, i32** %12, align 8
  %34 = load i32*, i32** %6, align 8
  %35 = load i32, i32* %7, align 4
  %36 = load i32*, i32** %11, align 8
  %37 = load i32, i32* %9, align 4
  %38 = mul nsw i32 %37, 24
  %39 = call i32 @r_buf_read_at(i32* %34, i32 %35, i32* %36, i32 %38)
  store i32 0, i32* %13, align 4
  br label %40

40:                                               ; preds = %63, %31
  %41 = load i32, i32* %13, align 4
  %42 = load i32, i32* %9, align 4
  %43 = icmp slt i32 %41, %42
  br i1 %43, label %44, label %66

44:                                               ; preds = %40
  %45 = load i32, i32* %13, align 4
  %46 = mul nsw i32 %45, 24
  store i32 %46, i32* %14, align 4
  %47 = load i32*, i32** %11, align 8
  %48 = load i32, i32* %14, align 4
  %49 = sext i32 %48 to i64
  %50 = getelementptr inbounds i32, i32* %47, i64 %49
  %51 = call i32 @r_read_le32(i32* %50)
  store i32 %51, i32* %15, align 4
  %52 = load i32*, i32** %11, align 8
  %53 = load i32, i32* %14, align 4
  %54 = sext i32 %53 to i64
  %55 = getelementptr inbounds i32, i32* %52, i64 %54
  %56 = getelementptr inbounds i32, i32* %55, i64 4
  %57 = call i32 @r_read_le32(i32* %56)
  store i32 %57, i32* %16, align 4
  %58 = load i32*, i32** %12, align 8
  %59 = load i32, i32* %15, align 4
  %60 = load i32, i32* %16, align 4
  %61 = call i32 @newSymbol(i32* null, i32 %59, i32 %60)
  %62 = call i32 @r_list_append(i32* %58, i32 %61)
  br label %63

63:                                               ; preds = %44
  %64 = load i32, i32* %13, align 4
  %65 = add nsw i32 %64, 1
  store i32 %65, i32* %13, align 4
  br label %40

66:                                               ; preds = %40
  %67 = load i32*, i32** %11, align 8
  %68 = call i32 @free(i32* %67)
  %69 = load i32*, i32** %12, align 8
  store i32* %69, i32** %5, align 8
  br label %70

70:                                               ; preds = %66, %30
  %71 = load i32*, i32** %5, align 8
  ret i32* %71
}

declare dso_local i32* @calloc(i32, i32) #1

declare dso_local i32* @r_list_newf(i32) #1

declare dso_local i32 @r_buf_read_at(i32*, i32, i32*, i32) #1

declare dso_local i32 @r_read_le32(i32*) #1

declare dso_local i32 @r_list_append(i32*, i32) #1

declare dso_local i32 @newSymbol(i32*, i32, i32) #1

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
